@@ -1,0 +1,45 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<oor:component-data xmlns:oor="http://openoffice.org/2001/registry" xmlns:xs="http://www.w3.org/2001/XMLSchema" oor:name="Addons" oor:package="org.openoffice.Office">
+    <node oor:name="AddonUI">
+        <node oor:name="OfficeToolBar">
+            <node oor:name="scsolver.SolverImpl" oor:op="replace">
+            <node oor:name="m1" oor:op="replace">
+               <prop oor:name="URL" oor:type="xs:string">
+                   <value>scsolver.SolverImpl:execute</value>
+               </prop>
+                <prop oor:name="ImageIdentifier" oor:type="xs:string">
+                    <value/>
+               </prop>
+                <prop oor:name="Title" oor:type="xs:string">
+                   <value xml:lang="en-US">Solver</value>
+               </prop>
+               <prop oor:name="Target" oor:type="xs:string">
+                   <value>_self</value>
+               </prop>
+               <prop oor:name="Context" oor:type="xs:string">
+                   <value>com.sun.star.sheet.SpreadsheetDocument</value>
+               </prop>
+            </node>
+            </node>
+        </node>
+        <node oor:name="AddonMenu">
+            <node oor:name="scsolver.SolverImpl" oor:op="replace">
+               <prop oor:name="URL" oor:type="xs:string">
+                   <value>scsolver.SolverImpl:execute</value>
+               </prop>
+                <prop oor:name="ImageIdentifier" oor:type="xs:string">
+                    <value/>
+               </prop>
+                <prop oor:name="Title" oor:type="xs:string">
+                   <value xml:lang="en-US">Solver</value>
+               </prop>
+               <prop oor:name="Target" oor:type="xs:string">
+                   <value>_self</value>
+               </prop>
+               <prop oor:name="Context" oor:type="xs:string">
+                   <value>com.sun.star.sheet.SpreadsheetDocument</value>
+               </prop>
+           </node>
+       </node>
+    </node>
+</oor:component-data>
