@@ -1,3 +1,8 @@
+2007-06-12  Kohei Yoshida  <kyoshida@novell.com>
+
+    * workben/addon_pkg/*: re-added to make it possible to (once again) build
+    the Solver component as a standalone UNO package.  Still work in progress.
+
 2007-06-11  Kohei Yoshida  <kyoshida@novell.com>
 
     * source/inc/numeric/matrix.hxx:
